WIP: make errand deployable with cf-deployment
[#168979143]

Signed-off-by: Georgi Dankov <gddankov@gmail.com>

--- a/jobs/install_eirini/templates/install.erb
+++ b/jobs/install_eirini/templates/install.erb
@@ -9,7 +9,7 @@ export PATH=${HELM}:${KUBECTL}:${PATH}
 export KUBECONFIG=$WORK_DIR/config/kube-config.yml
 
 main(){
-  # create-secrets
+   create-secrets
    helm-install-eirini
 }
 
