Provide service account info for GKE
[#168979143]

Signed-off-by: Julian Skupnjak <skupnjak@de.ibm.com>

--- a/jobs/install_eirini/templates/install.erb
+++ b/jobs/install_eirini/templates/install.erb
@@ -7,6 +7,7 @@ KUBECTL=/var/vcap/packages/kubectl/bin
 HELM=/var/vcap/packages/helm/bin
 export PATH=${HELM}:${KUBECTL}:${PATH}
 export KUBECONFIG=$WORK_DIR/config/kube-config.yml
+export GOOGLE_APPLICATION_CREDENTIALS=$WORK_DIR/config/service-account.json
 
 main(){
    create-secrets
