Set bits service credentials properly
[#168979143]

Signed-off-by: Michael Schaefer <schaefer.michael@de.ibm.com>

--- a/jobs/install_eirini/templates/install.erb
+++ b/jobs/install_eirini/templates/install.erb
@@ -21,6 +21,8 @@ create-secrets(){
   kubectl create secret generic $secret_name \
     --from-file=config/certs \
     --from-literal=nats-password=<%= p("nats_password") %> \
+    --from-literal=bits-service-user=admin \
+    --from-literal=bits-service-password=<%= p("bits_password") %> \
     --namespace $namespace \
     --dry-run -o yaml |
   kubectl apply -f -
